파일 업로드 및 썸네일 생성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #query 띄어쓰기 해준다
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=2MB
+spring.servlet.multipart.location=/Users/choegyeongmin/Documents/workspace-spring-tool-suite-4-4.14.0.RELEASE/spring_study-1/src/main/resources/static/public/img
